--- a/src/API/appsettings.json
+++ b/src/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Backend" : "server=localhost;database=BackendTest;uid=root;pwd=rochyrd"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
